cmake_minimum_required(VERSION 3.3)
project(swftools)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    avi2swf/avi2swf.cc
    avi2swf/v2swf.c
    avi2swf/v2swf.h
    avi2swf/videoreader.h
    avi2swf/videoreader_avifile.cc
    avi2swf/videoreader_avifile.hh
    avi2swf/videoreader_dummy.cc
    avi2swf/videoreader_vfw.cc
    avi2swf/videoreader_vfw.hh
    installer/lzma/LzmaDecode.c
    installer/lzma/LzmaDecode.h
    installer/lzma/LzmaTypes.h
    installer/archive.c
    installer/archive.h
    installer/background.c
    installer/crnfiles.c
    installer/gpl.c
    installer/installer.c
    installer/installer.h
    installer/makegui.c
    installer/mkarchive.c
    installer/utils.c
    installer/utils.h
    lib/action/blocks/error.h
    lib/action/action.h
    lib/action/actioncompiler.c
    lib/action/actioncompiler.h
    lib/action/assembler.c
    lib/action/assembler.h
    lib/action/compile.c
    lib/action/compile.h
    lib/action/lex.swf4.c
    lib/action/lex.swf5.c
    lib/action/libming.c
    lib/action/libming.h
    lib/action/listaction.c
    lib/action/ming.h
    lib/action/swf4compiler.tab.c
    lib/action/swf4compiler.tab.h
    lib/action/swf5compiler.tab.c
    lib/action/swf5compiler.tab.h
    lib/art/art_affine.c
    lib/art/art_affine.h
    lib/art/art_alphagamma.c
    lib/art/art_alphagamma.h
    lib/art/art_bpath.c
    lib/art/art_bpath.h
    lib/art/art_config.h
    lib/art/art_filterlevel.h
    lib/art/art_gray_svp.c
    lib/art/art_gray_svp.h
    lib/art/art_misc.c
    lib/art/art_misc.h
    lib/art/art_pathcode.h
    lib/art/art_pixbuf.c
    lib/art/art_pixbuf.h
    lib/art/art_point.h
    lib/art/art_rect.c
    lib/art/art_rect.h
    lib/art/art_rect_svp.c
    lib/art/art_rect_svp.h
    lib/art/art_rect_uta.c
    lib/art/art_rect_uta.h
    lib/art/art_render.c
    lib/art/art_render.h
    lib/art/art_render_gradient.c
    lib/art/art_render_gradient.h
    lib/art/art_render_mask.c
    lib/art/art_render_mask.h
    lib/art/art_render_svp.c
    lib/art/art_render_svp.h
    lib/art/art_rgb.c
    lib/art/art_rgb.h
    lib/art/art_rgb_a_affine.c
    lib/art/art_rgb_a_affine.h
    lib/art/art_rgb_affine.c
    lib/art/art_rgb_affine.h
    lib/art/art_rgb_affine_private.c
    lib/art/art_rgb_affine_private.h
    lib/art/art_rgb_bitmap_affine.c
    lib/art/art_rgb_bitmap_affine.h
    lib/art/art_rgb_pixbuf_affine.c
    lib/art/art_rgb_pixbuf_affine.h
    lib/art/art_rgb_rgba_affine.c
    lib/art/art_rgb_rgba_affine.h
    lib/art/art_rgb_svp.c
    lib/art/art_rgb_svp.h
    lib/art/art_rgba.c
    lib/art/art_rgba.h
    lib/art/art_svp.c
    lib/art/art_svp.h
    lib/art/art_svp_intersect.c
    lib/art/art_svp_intersect.h
    lib/art/art_svp_ops.c
    lib/art/art_svp_ops.h
    lib/art/art_svp_point.c
    lib/art/art_svp_point.h
    lib/art/art_svp_render_aa.c
    lib/art/art_svp_render_aa.h
    lib/art/art_svp_vpath.c
    lib/art/art_svp_vpath.h
    lib/art/art_svp_vpath_stroke.c
    lib/art/art_svp_vpath_stroke.h
    lib/art/art_svp_wind.c
    lib/art/art_svp_wind.h
    lib/art/art_uta.c
    lib/art/art_uta.h
    lib/art/art_uta_ops.c
    lib/art/art_uta_ops.h
    lib/art/art_uta_rect.c
    lib/art/art_uta_rect.h
    lib/art/art_uta_svp.c
    lib/art/art_uta_svp.h
    lib/art/art_uta_vpath.c
    lib/art/art_uta_vpath.h
    lib/art/art_vpath.c
    lib/art/art_vpath.h
    lib/art/art_vpath_bpath.c
    lib/art/art_vpath_bpath.h
    lib/art/art_vpath_dash.c
    lib/art/art_vpath_dash.h
    lib/art/art_vpath_svp.c
    lib/art/art_vpath_svp.h
    lib/art/config.h
    lib/art/gen_art_config.c
    lib/art/libart.h
    lib/as3/abc.c
    lib/as3/abc.h
    lib/as3/assets.c
    lib/as3/assets.h
    lib/as3/builtin.c
    lib/as3/builtin.h
    lib/as3/code.c
    lib/as3/code.h
    lib/as3/common.c
    lib/as3/common.h
    lib/as3/compiler.c
    lib/as3/compiler.h
    lib/as3/expr.c
    lib/as3/expr.h
    lib/as3/files.c
    lib/as3/files.h
    lib/as3/import.c
    lib/as3/import.h
    lib/as3/initcode.c
    lib/as3/initcode.h
    lib/as3/main.c
    lib/as3/mklib.c
    lib/as3/opcodes.c
    lib/as3/opcodes.h
    lib/as3/parser.h
    lib/as3/parser.tab.c
    lib/as3/parser.tab.h
    lib/as3/parser_help.c
    lib/as3/parser_help.h
    lib/as3/pool.c
    lib/as3/pool.h
    lib/as3/registry.c
    lib/as3/registry.h
    lib/as3/scripts.c
    lib/as3/scripts.h
    lib/as3/state.c
    lib/as3/state.h
    lib/as3/tokenizer.h
    lib/as3/tokenizer.yy.c
    lib/bladeenc/codec.c
    lib/bladeenc/codec.h
    lib/bladeenc/common.c
    lib/bladeenc/common.h
    lib/bladeenc/encode.c
    lib/bladeenc/encoder.h
    lib/bladeenc/formatbitstream2.c
    lib/bladeenc/formatbitstream2.h
    lib/bladeenc/huffman.h
    lib/bladeenc/l3bitstream-pvt.h
    lib/bladeenc/l3bitstream.c
    lib/bladeenc/l3bitstream.h
    lib/bladeenc/l3psy.c
    lib/bladeenc/l3psy.h
    lib/bladeenc/l3side.h
    lib/bladeenc/loop-pvt.h
    lib/bladeenc/loop.c
    lib/bladeenc/loop.h
    lib/bladeenc/mdct.c
    lib/bladeenc/mdct.h
    lib/bladeenc/reservoir.c
    lib/bladeenc/reservoir.h
    lib/bladeenc/subs.c
    lib/bladeenc/system.h
    lib/bladeenc/tables.c
    lib/bladeenc/tables.h
    lib/devices/bbox.c
    lib/devices/bbox.h
    lib/devices/dummy.c
    lib/devices/dummy.h
    lib/devices/file.c
    lib/devices/file.h
    lib/devices/opengl.c
    lib/devices/opengl.h
    lib/devices/ops.c
    lib/devices/ops.h
    lib/devices/pdf.c
    lib/devices/pdf.h
    lib/devices/polyops.c
    lib/devices/polyops.h
    lib/devices/record.c
    lib/devices/record.h
    lib/devices/render.c
    lib/devices/render.h
    lib/devices/rescale.c
    lib/devices/rescale.h
    lib/devices/swf.c
    lib/devices/swf.h
    lib/devices/text.c
    lib/devices/text.h
    lib/example/alignzones.c
    lib/example/box.c
    lib/example/buttontest.c
    lib/example/demofont.c
    lib/example/dumpfont.c
    lib/example/edittext.c
    lib/example/glyphshape.c
    lib/example/hexfont.c
    lib/example/jpegtest.c
    lib/example/protect.c
    lib/example/shape1.c
    lib/example/sound.c
    lib/example/sprites.c
    lib/example/text.c
    lib/example/transtest.c
    lib/example/zlibtest.c
    lib/filters/alpha.c
    lib/filters/flatten.c
    lib/filters/one_big_font.c
    lib/filters/remove_font_transforms.c
    lib/filters/remove_invisible_characters.c
    lib/filters/rescale_images.c
    lib/filters/vectors_to_glyphs.c
    lib/gfxpoly/active.c
    lib/gfxpoly/active.h
    lib/gfxpoly/convert.c
    lib/gfxpoly/convert.h
    lib/gfxpoly/heap.h
    lib/gfxpoly/moments.c
    lib/gfxpoly/moments.h
    lib/gfxpoly/poly.c
    lib/gfxpoly/poly.h
    lib/gfxpoly/renderpoly.c
    lib/gfxpoly/renderpoly.h
    lib/gfxpoly/speedtest.c
    lib/gfxpoly/stroke.c
    lib/gfxpoly/stroke.h
    lib/gfxpoly/test.c
    lib/gfxpoly/test_stroke.c
    lib/gfxpoly/wind.c
    lib/gfxpoly/wind.h
    lib/gfxpoly/xrow.c
    lib/gfxpoly/xrow.h
    lib/h.263/dct.c
    lib/h.263/dct.h
    lib/h.263/h263tables.c
    lib/h.263/h263tables.h
    lib/h.263/swfvideo.c
    lib/h.263/video.c
    lib/lame/bitstream.c
    lib/lame/bitstream.h
    lib/lame/config_static.h
    lib/lame/encoder.c
    lib/lame/encoder.h
    lib/lame/fft.c
    lib/lame/fft.h
    lib/lame/id3tag.c
    lib/lame/id3tag.h
    lib/lame/l3side.h
    lib/lame/lame-analysis.h
    lib/lame/lame.c
    lib/lame/lame.h
    lib/lame/lame_global_flags.h
    lib/lame/lameerror.h
    lib/lame/machine.h
    lib/lame/newmdct.c
    lib/lame/newmdct.h
    lib/lame/psymodel.c
    lib/lame/psymodel.h
    lib/lame/quantize.c
    lib/lame/quantize.h
    lib/lame/quantize_pvt.c
    lib/lame/quantize_pvt.h
    lib/lame/reservoir.c
    lib/lame/reservoir.h
    lib/lame/set_get.c
    lib/lame/tables.c
    lib/lame/tables.h
    lib/lame/takehiro.c
    lib/lame/tools.h
    lib/lame/util.c
    lib/lame/util.h
    lib/lame/vbrquantize.c
    lib/lame/vbrquantize.h
    lib/lame/VbrTag.c
    lib/lame/VbrTag.h
    lib/lame/version.c
    lib/lame/version.h
    lib/modules/swfaction.c
    lib/modules/swfalignzones.c
    lib/modules/swfbits.c
    lib/modules/swfbutton.c
    lib/modules/swfcgi.c
    lib/modules/swfdraw.c
    lib/modules/swfdump.c
    lib/modules/swffilter.c
    lib/modules/swffont.c
    lib/modules/swfobject.c
    lib/modules/swfrender.c
    lib/modules/swfscripts.c
    lib/modules/swfshape.c
    lib/modules/swfsound.c
    lib/modules/swftext.c
    lib/modules/swftools.c
    lib/pdf/aconf.h
    lib/pdf/bbox.c
    lib/pdf/bbox.h
    lib/pdf/BitmapOutputDev.cc
    lib/pdf/BitmapOutputDev.h
    lib/pdf/CharOutputDev.cc
    lib/pdf/CharOutputDev.h
    lib/pdf/cmyk.cc
    lib/pdf/cmyk.h
    lib/pdf/CommonOutputDev.cc
    lib/pdf/CommonOutputDev.h
    lib/pdf/DummyOutputDev.cc
    lib/pdf/DummyOutputDev.h
    lib/pdf/fonts.c
    lib/pdf/fonts.h
    lib/pdf/FullBitmapOutputDev.cc
    lib/pdf/FullBitmapOutputDev.h
    lib/pdf/InfoOutputDev.cc
    lib/pdf/InfoOutputDev.h
    lib/pdf/pdf.cc
    lib/pdf/pdf.h
    lib/pdf/pdf2jpeg.c
    lib/pdf/popplercompat.cc
    lib/pdf/popplercompat.h
    lib/pdf/VectorGraphicOutputDev.cc
    lib/pdf/VectorGraphicOutputDev.h
    lib/pdf/XMLOutputDev.cc
    lib/pdf/XMLOutputDev.h
    lib/python/action.c
    lib/python/action.h
    lib/python/gfx.c
    lib/python/image.c
    lib/python/image.h
    lib/python/mypython.c
    lib/python/primitives.c
    lib/python/primitives.h
    lib/python/pyutils.c
    lib/python/pyutils.h
    lib/python/SWF.c
    lib/python/tag.c
    lib/python/tag.h
    lib/python/taglist.c
    lib/python/taglist.h
    lib/python/tagmap.c
    lib/python/tagmap.h
    lib/python/tags.c
    lib/python/tags.h
    lib/readers/image.c
    lib/readers/image.h
    lib/readers/swf.c
    lib/readers/swf.h
    lib/ruby/gfx.c
    lib/args.h
    lib/base64.c
    lib/base64.h
    lib/bitio.c
    lib/bitio.h
    lib/drawer.c
    lib/drawer.h
    lib/gfxdevice.h
    lib/gfxfilter.c
    lib/gfxfilter.h
    lib/gfxfont.c
    lib/gfxfont.h
    lib/gfximage.c
    lib/gfximage.h
    lib/gfxpoly.h
    lib/gfxsource.h
    lib/gfxtools.c
    lib/gfxtools.h
    lib/gfxwindow.c
    lib/gfxwindow.h
    lib/gfxwindow_unix.c
    lib/gfxwindow_win32.c
    lib/graphcut.c
    lib/graphcut.h
    lib/jpeg.c
    lib/jpeg.h
    lib/kdtree.c
    lib/kdtree.h
    lib/log.c
    lib/log.h
    lib/mem.c
    lib/mem.h
    lib/mp3.c
    lib/mp3.h
    lib/old_rfxswf.h
    lib/os.c
    lib/os.h
    lib/png.c
    lib/png.h
    lib/q.c
    lib/q.h
    lib/rfxswf.c
    lib/rfxswf.h
    lib/ttf.c
    lib/ttf.h
    lib/types.h
    lib/utf8.c
    lib/utf8.h
    lib/wav.c
    lib/wav.h
    lib/xml.c
    lib/xml.h
    src/as3compile.c
    src/font2swf.c
    src/gfx2gfx.c
    src/gif2swf.c
    src/jpeg2swf.c
    src/parser.h
    src/parser.yy.c
    src/pdf2pdf.c
    src/pdf2swf.c
    src/png2swf.c
    src/swfbbox.c
    src/swfbytes.c
    src/swfc-feedback.c
    src/swfc-feedback.h
    src/swfc-history.c
    src/swfc-history.h
    src/swfc-interpolation.c
    src/swfc-interpolation.h
    src/swfc.c
    src/swfcombine.c
    src/swfdump.c
    src/swfextract.c
    src/swfrender.c
    src/swfstrings.c
    src/ttftool.c
    src/wav2swf.c
    swfs/keyboard_viewer.c
    swfs/PreLoaderTemplate.c
    swfs/simple_viewer.c
    config.h)

add_executable(swftools ${SOURCE_FILES})